@@ -24,6 +24,12 @@ has 'schema_class' => (
   required => 1,
 );
 
+has 'schema_method' => (
+  is      => 'ro',
+  isa     => 'Str',
+  default => 'schema',
+);
+
 has 'result_class_namespace' => (
   is      => 'ro',
   isa     => 'Str',
@@ -438,6 +444,7 @@ sub write_table {
   my $result_class    = $self->result_class($table);
   my $resultset_class = $self->resultset_class($table);
   my $dbic_class      = $self->schema_class . "::_dbic";
+  my $mesoderm_role   = $self->schema_class . "::_mesoderm";
   my %insert_default;
 
   print $fh "##\n## Table: ", $table->name, "\n##\n\n";
@@ -455,7 +462,7 @@ sub write_table {
 
   my $comp_init = $self->write_components($fh, $table);
 
-  print $fh "  with '$_';\n" for $self->table_roles($table);
+  print $fh "  with '$_';\n" for $self->table_roles($table), $mesoderm_role;
   print $fh "  no Moose;\n\n";
 
   print $fh "  __PACKAGE__->table('", $table->name, "');\n";
@@ -518,7 +525,7 @@ sub write_table {
   print $fh "  { package $resultset_class;\n";
   print $fh "    use Moose;\n";
   print $fh "    extends 'DBIx::Class::ResultSet';\n";
-  print $fh "    with '$_';\n" for $self->resultset_roles($table);
+  print $fh "    with '$_';\n" for $self->resultset_roles($table), $mesoderm_role;
   print $fh "    no Moose;\n";
   print $fh "  }\n";
   print $fh "  __PACKAGE__->resultset_class('$resultset_class');\n";
@@ -531,6 +538,8 @@ sub write_preamble {
   my ($self, $fh) = @_;
 
   my $dbic_class = $self->schema_class . "::_dbic";
+  my $mesoderm_role = $self->schema_class . "::_mesoderm";
+  my $schema_method = $self->schema_method;
   print $fh "#\n";
   print $fh "# *** DO NOT EDIT THIS FILE ***\n";
   printf $fh "# Generated on %s UTC, by\n", scalar gmtime();
@@ -542,10 +551,14 @@ sub write_preamble {
   }
   print $fh "#\n\n";
 
+  print $fh "package $mesoderm_role;\n";
+  print $fh "use Moose::Role;\n";
+  print $fh "sub $schema_method { shift->result_source->schema->{__mesoderm} }\n\n";
   print $fh "package $dbic_class;\n";
   print $fh "use base qw(DBIx::Class::Schema);\n\n";
   print $fh "package ", $self->schema_class, "::_scaffold;\n";
   print $fh "use Moose::Role;\n";
+  print $fh "require Scalar::Util;\n";
   print $fh "requires 'connect_args';\n\n";
 
   print $fh "has 'dbic' => (\n";
@@ -554,7 +567,9 @@ sub write_preamble {
   print $fh "  lazy => 1,\n";
   print $fh "  default => sub {\n";
   print $fh "    my \$self = shift;\n";
-  print $fh "    $dbic_class->connect( \$self->connect_args );\n";
+  print $fh "    my \$dbic = $dbic_class->connect( \$self->connect_args );\n";
+  print $fh "    Scalar::Util::weaken(\$dbic->{__mesoderm} = \$self);\n";
+  print $fh "    return \$dbic;\n";
   print $fh "  },\n";
   print $fh ");\n\n";
 
@@ -732,6 +747,12 @@ A L<SQL::Translator::Object::Schema> object that the scaffolding will be generat
 Required.
 Package name that the scaffold will be generated for. The actual package created will be a
 L<Moose::Role> with the named C<schema_class> plus C<::_scaffold>
+
+=item schema_method
+
+Name of method to generate that when called on any result row or result set
+will return the parent Mesoderm schema object.
+Defaults to C<schema>
 
 =item result_class_namespace
 
