@@ -1,4 +1,5 @@
 {{$NEXT}}
+  * Add method to all result sets and rows to obtain mesoderm schema object
 
 0.102881 -- Fri Oct 15 17:33:29 CDT 2010
   * Fix column_accessor override (Ask Bjørn Hansen)
